# openclaw-control-panel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
app/: __init__.py  auth.py  config.py  extensions.py  platform_paths.py
desktop/: .gitignore  README.md  package.json
docker/: Caddyfile  Dockerfile.mgmt  Dockerfile.openclaw-stub  compose.yaml  journalctl-mock  openclaw-stub.conf  openclaw-stub.html  systemctl-mock
docs/: api-reference.md  deployment-guide.md  install-guide.md  local-testing.md  migration-notes.md  project-changelog.md  proxmox-deployment.md  system-architecture.md  tino-hsm-deployment.md
scripts/: bootstrap-fix.sh  bootstrap.sh  build-offline-bundle.sh  build-release-tarball.sh  openclaw-config-enforce.sh  openclaw-healthcheck.sh  openclaw-sync-auth-profiles.sh  proxmox-clone-deploy.sh  proxmox-cloud-init.yaml  publish-github-release.sh
systemd/: caddy-override.conf  openclaw-healthcheck.service  openclaw-healthcheck.timer  openclaw-mgmt.service  openclaw.service
tests/: conftest.py  test_agents.py  test_app_factory.py  test_auth.py  test_bindings.py  test_channels.py  test_cli_whitelist.py  test_devices.py  test_domain_change.py  test_dotenv_atomic.py  test_endpoint_contract.py  test_ip_cidr.py  test_oauth_codex.py  test_provider_switch.py  test_routes_control.py  test_routes_info.py  test_secrets_mask.py  test_security_fixes.py  test_subprocess_safe.py
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+122 files in other folders)
